# e6-pool-monitor

./: .pdm-python  CREDITS.md  README.md  __update-pdm.bat  pyproject.toml  requirements.txt
dev_scripts/: __update-pdm.bat
src/: _notes.txt  bot.py  main.py
src/modules/: api.py  database.py  startup.py
