[project]
name = ""
version = ""
description = ""
authors = [
    {name = "J Stuff", email = "josh@j-stuff.net"},
]
dependencies = [
    "aiohttp==3.9.1",
    "aiosignal==1.3.1",
    "attrs==23.1.0",
    "discord-py==2.3.2",
    "frozenlist==1.4.1",
    "idna==3.6",
    "multidict==6.0.4",
    "termcolor==2.4.0",
    "yarl==1.9.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "gpl-3.0"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
